--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </div>
     <script>
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Base.loader.js";
+      var loaderUrl = buildUrl + "/Basen.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Base.data.unityweb",
-        frameworkUrl: buildUrl + "/Base.framework.js.unityweb",
-        codeUrl: buildUrl + "/Base.wasm.unityweb",
+        dataUrl: buildUrl + "/Basen.data.unityweb",
+        frameworkUrl: buildUrl + "/Basen.framework.js.unityweb",
+        codeUrl: buildUrl + "/Basen.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "ProjectVirtualion",
         productName: "Virtualion",
@@ -65,7 +65,7 @@
         canvas.style.width = "1024px";
         canvas.style.height = "700px";
       }
-      canvas.style.background = "url('" + buildUrl + "/Base.jpg') center / cover";
+      canvas.style.background = "url('" + buildUrl + "/Basen.jpg') center / cover";
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
